--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "format": "prettier --write \"src/**/*.{js,jsx}\"",
-    "lint": "eslint \"src/**/*.{js,jsx}\" --quiet"
+    "lint": "eslint \"src/**/*.{js,jsx}\" --quiet",
+    "predeploy": "yarn build",
+"deploy": "gh-pages -d dist"
   },
   "eslintConfig": {
     "extends": [
@@ -47,6 +49,7 @@
   },
   "devDependencies": {
     "eslint-config-prettier": "^6.15.0",
+    "gh-pages": "^3.1.0",
     "prettier": "^2.1.2"
   }
 }
