--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-scripts": "4.0.0",
     "react-thunk": "^1.0.0",
     "redux": "^4.0.5",
+    
     "redux-thunk": "^2.3.0",
     "web-vitals": "^0.2.4"
   },
@@ -48,6 +49,7 @@
   },
   "devDependencies": {
     "eslint-config-prettier": "^6.15.0",
-    "prettier": "^2.1.2"
+    "prettier": "^2.1.2",
+    "redux-devtools-extension": "^2.13.8"
   }
 }
