--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,8 +1,4 @@
- {
-    "env": {
-        "browser": true,
-        "es2021": true
-    },
+{
     "extends": [
         "eslint:recommended",
         "plugin:import/errors",
@@ -11,18 +7,26 @@
         "prettier",
         "prettier/react"
     ],
+    "rules": {
+        "react/prop-types": 0,
+        "no-unused-vars": "warn"
+    },
+    "plugins": ["react", "import", "jsx-a11y"],
     "parserOptions": {
         "ecmaVersion": 2018,
         "sourceType": "module",
         "ecmaFeatures": {
             "jsx": true
-        },
+        }
     },
-    "plugins": ["react", "import", "jsx-a11y"],
-
-    
-    "rules": {
-        "react/prop-types": 0,
-        "no-unused-vars": "warn"
+    "env": {
+        "es6": true,
+        "browser": true,
+        "node": true
+    },
+    "settings": {
+        "react": {
+            "version": "detect"
+        }
     }
 }
