--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,7 +9,8 @@
     ],
     "rules": {
         "react/prop-types": 0,
-        "no-unused-vars": "warn"
+        "no-unused-vars": "warn",
+        "import/no-unresolved": 0
     },
     "plugins": ["react", "import", "jsx-a11y"],
     "parserOptions": {
