--- a/package.json
+++ b/package.json
@@ -62,6 +62,10 @@
     "jest-dom": "^4.0.0",
     "jest-svg-transformer": "^1.0.0",
     "react-test-renderer": "^17.0.2",
-    "redux-devtools-extension": "^2.13.8"
+    "redux-devtools-extension": "^2.13.8",
+    "regenerator-runtime": "^0.13.7"
+  },
+  "jest": {
+    "setupFilesAftterEnv": ["./src/tests/setupTests.js"]
   }
 }
